# openscm-units

./: .bandit.yml  .codecov.yml  .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  LICENCE  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements-docs-locked.txt  requirements-locked.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  release_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci-cd-workflow.yml  ci.yaml  deploy.yaml  install-conda.yaml  install-pypi.yaml  install.yaml  release.yaml  test-conda-install.yml  test-pypi-install.yml
changelog/: 44.breaking.md  44.trivial.md  46.trivial.md  47.docs.md  47.trivial.md  48.trivial.md  49.trivial.md  50.trivial.md  51.feature.md  51.trivial.md  53.fix.md  54.docs.md  54.trivial.md  55.improvement.md  56.trivial.md  57.trivial.md  58.docs.md  58.trivial.md  61.trivial.md  README.md
docs/: NAVIGATION.md  changelog.md  development.md  gen_doc_stubs.py  index.md  installation.md
docs/further-background/: index.md
docs/how-to-guides/: basic-calculation.md  custom-conversions.py  index.md  run-code-in-a-notebook.py
docs/source/: changelog.md  conf.py  data.rst  development.md  development.rst  index.md  index.rst  notebooks.md  unit_registry.rst  usage.rst
docs/source/_templates/: layout.html
docs/source/api/: openscm_units._unit_registry.rst  openscm_units.data.mixtures.rst  openscm_units.data.rst  openscm_units.registry.rst  openscm_units.rst
docs/source/notebooks/: basic-demo.py  custom-conversions.ipynb  custom-conversions.py  design-principles.py  introduction.ipynb
docs/tutorials/: basic-demonstration.py  index.md
notebooks/: custom-conversions.ipynb  introduction.ipynb
scripts/: changelog-to-release-template.py  extract_changelog.py  print-conda-recipe-pins.py  re-write-changelog.py  test-install.py  test_install.py
src/openscm_units/: __init__.py  _unit_registry.py  _version.py  operations.py  registry.py  unit_registry.py  utils.py
src/openscm_units/data/: __init__.py  metric_conversions.csv  mixtures.py  mixtures.yaml
stubs/: globalwarmingpotentials.pyi
tests/: conftest.py
tests/integration/: test_custom_context_csv.py
tests/test-data/: custom-context.csv
tests/unit/: test_units.py  test_utils.py
